integration based on radarr integration
