# src/Sonarr.Api.V3/Config/MediaManagementConfigResource.cs
@@ -9,7 +9,8 @@ namespace Sonarr.Api.V3.Config
     public class MediaManagementConfigResource : RestResource
     {
         public bool AutoUnmonitorPreviouslyDownloadedEpisodes { get; set; }
-        public string RecycleBin { get; set; }
+        public bool RecycleBinEnabled { get; set; }
+        public RecycleBinMode RecycleBinMode { get; set; }
         public int RecycleBinCleanupDays { get; set; }
         public ProperDownloadTypes DownloadPropersAndRepacks { get; set; }
         public bool CreateEmptySeriesFolders { get; set; }
@@ -39,7 +40,8 @@ namespace Sonarr.Api.V3.Config
             return new MediaManagementConfigResource
             {
                 AutoUnmonitorPreviouslyDownloadedEpisodes = model.AutoUnmonitorPreviouslyDownloadedEpisodes,
-                RecycleBin = model.RecycleBin,
+                RecycleBinEnabled = model.RecycleBinEnabled,
+                RecycleBinMode = model.RecycleBinMode,
                 RecycleBinCleanupDays = model.RecycleBinCleanupDays,
                 DownloadPropersAndRepacks = model.DownloadPropersAndRepacks,
                 CreateEmptySeriesFolders = model.CreateEmptySeriesFolders,
