# src/Sonarr.Api.V3/RootFolders/RootFolderResource.cs
@@ -9,6 +9,7 @@ namespace Sonarr.Api.V3.RootFolders
     public class RootFolderResource : RestResource
     {
         public string Path { get; set; }
+        public bool RecycleBinEnabled { get; set; }
         public bool Accessible { get; set; }
         public long? FreeSpace { get; set; }
 
@@ -29,6 +30,7 @@ namespace Sonarr.Api.V3.RootFolders
                 Id = model.Id,
 
                 Path = model.Path.GetCleanPath(),
+                RecycleBinEnabled = model.RecycleBinEnabled,
                 Accessible = model.Accessible,
                 FreeSpace = model.FreeSpace,
                 UnmappedFolders = model.UnmappedFolders
